fix scrollbar css

--- a/src/css/setting.css
+++ b/src/css/setting.css
@@ -61,9 +61,7 @@
   border: 2px solid var(--accent-color-2);
   box-shadow: 0px 0px 10px var(--accent-color-2);
   white-space: pre;     
-  overflow: auto;
-  scrollbar-width: 1em;             
-  scrollbar-color: var(--accent-color-2) transparent;  
+  overflow: auto;  
 }
 
 #display::-webkit-scrollbar {
